<resources>
    <string name="app_name">No Accidental Call</string>
    <string name="notification_title">Intercept Accidental Call</string>


    <string name="no_call_privilege">Error: No Accidental Call couldn\'t work without \"CALL_PHONE permission!\"</string>

    <string name="general_setting">General</string>
    <string name="enable_incoming_checkbox_title">Incoming Call</string>
    <string name="enable_incoming_checkbox_summary">Prevent answering/hanging up the phone by accident when the phone is in the pocket</string>

    <string name="enable_outgoing_checkbox_title">Outgoing Call</string>
    <string name="enable_outgoing_checkbox_summary">Prevent accidental outgoing calls when the phone is in the pocket</string>

    <string name="incoming_setting">Incoming Call</string>
    <string name="outgoing_setting">Outgoing Call</string>

    <string name="delay_title">Detect delay (Millisecond)</string>


    <string name="delay_default_value" translatable="false">40</string>


    <string name="incoming_prevent_method_title">Abort Method</string>
    <string-array name="incoming_prevent_method_entries">
        <item>User experience First</item>
        <item>Safety First</item>
    </string-array>
    <string-array name="incoming_prevent_method_values">
        <item>1</item>
        <item>2</item>
    </string-array>


    <string name="outgoing_prevent_method_title">Abort Method</string>

    <string-array name="outgoing_prevent_method_entries">
        <item>Prevent Mode</item>
        <item>Endcall Mode</item>
    </string-array>
    <string-array name="outgoing_prevent_method_values">
        <item>1</item>
        <item>2</item>
    </string-array>


    <string name="enable_notification_checkbox_title">Notification</string>
    <string name="enable_notification_checkbox_summaryOn">Show notifications</string>
    <string name="enable_notification_checkbox_summaryOff">Don\'t show notifications</string>


    <string name="about_setting">About</string>
    <string name="about_title">Help</string>
    <string name="about_summary">Copyright © 2015 - Firesun\nFeedback: firesun.cn@gmail.com\nGithub: https://github.com/firesunCN</string>

    <string name="about_soft_title">Summary</string>
    <string name="about_soft_summary">The software use the P-Sensor to determine whether the phone in your pocket and prevent accidental calls in this case.</string>

    <string name="help_title">Instructions</string>
    <string name="help_summary">Detect delay: If the value is too small, it will be unable to intercept accidental calls. If too big, it will cause dial delay. You can mas the P-Sensor to simulate the pocket environment.\nIncoming Abort Method: "User experience First" means detecting firstly then locking the screen. "Safety First" is on the contrary.\nOutgoing Abort Method: "Prevent Mode" means detecting firstly then calling. "Endcall Mode" means calling firstly then hanging up the accidental calls.</string>

    <string name="about_us_title">No Accidental Call v1.5</string>
    <string name="about_us_summary">Copyright © 2015 - Firesun\nFeedback: firesun.cn@gmail.com\nSource: https://github.com/firesunCN/preventUnexpectedCall</string>

</resources>
