<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_setting" >
        <CheckBoxPreference
            android:key="enable_incoming_checkbox"
            android:title="@string/enable_incoming_checkbox_title"
            android:summary="@string/enable_incoming_checkbox_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="enable_outgoing_checkbox"
            android:title="@string/enable_outgoing_checkbox_title"
            android:summary="@string/enable_outgoing_checkbox_summary"
            android:defaultValue="true" />

        <EditTextPreference
            android:key="delay_text"
            android:title="@string/delay_title"
            android:defaultValue="@string/delay_default_value"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true"
            android:maxLines="1" />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/incoming_setting" >
        <ListPreference
            android:dependency="enable_incoming_checkbox"
            android:key="incoming_prevent_method_list"
            android:title="@string/incoming_prevent_method_title"
            android:defaultValue="1"
            android:entries="@array/incoming_prevent_method_entries"
            android:entryValues="@array/incoming_prevent_method_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/outgoing_setting" >

        <CheckBoxPreference
            android:dependency="enable_outgoing_checkbox"
            android:key="enable_notification_checkbox"
            android:title="@string/enable_notification_checkbox_title"
            android:summaryOn="@string/enable_notification_checkbox_summaryOn"
            android:summaryOff="@string/enable_notification_checkbox_summaryOff"
            android:defaultValue="true" />
        <ListPreference
            android:dependency="enable_outgoing_checkbox"
            android:key="outgoing_prevent_method_list"
            android:title="@string/outgoing_prevent_method_title"
            android:defaultValue="1"
            android:entries="@array/outgoing_prevent_method_entries"
            android:entryValues="@array/outgoing_prevent_method_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_setting" >
    <PreferenceScreen
        android:key="about_key"
        android:title="@string/about_title"
        android:summary="@string/about_summary" >
        <PreferenceScreen
            android:key="about_soft_key"
            android:title="@string/about_soft_title"
            android:summary="@string/about_soft_summary" >
        </PreferenceScreen>
        <PreferenceScreen
            android:key="help_key"
            android:title="@string/help_title"
            android:summary="@string/help_summary" >
        </PreferenceScreen>
        <PreferenceScreen
            android:key="about_us_key"
            android:title="@string/about_us_title"
            android:summary="@string/about_us_summary" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/firesunCN/preventUnexpectedCall" />
        </PreferenceScreen>
    </PreferenceScreen>
    </PreferenceCategory>


</PreferenceScreen>
